--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,13 @@ footer div div a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px; }
+  gap: 10px; }
 
 .footerImg {
   width: 50px;
-  height: 50px; }
+  height: 50px;
+  transition: .4s; }
+
+.footerImg:hover {
+  transform: scale(1.1);
+  transition: .4s; }
