--- a/main/_footer.scss
+++ b/main/_footer.scss
@@ -49,11 +49,16 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
-
+    gap: 10px;
 }
 
 .footerImg{
     width: 50px;
     height: 50px;
+    transition: .4s;
+}
+
+.footerImg:hover{
+    transform: scale(1.1);
+    transition: .4s;
 }
