Arreglos en producto y creacion de contacto

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,10 +6,11 @@
 
 /* Main Index */ @import "../layout/main-index";
 
+/* Main Productos */ @import "../layout/main-productos";
 
+/* Main Contacto */ @import "../layout/main-contacto";
 
-
-
+/* Main Ubicacion */ @import "../layout/main-ubicacion";
 
 
 
