--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,84 @@ div section img {
   display: flex;
   justify-content: space-around; }
 
+/* Main Productos */
+main {
+  padding-bottom: 50px; }
+  main h1 {
+    padding-top: 50px;
+    text-align: center;
+    font-size: 40px;
+    font-style: italic; }
+  main div h3 {
+    font-size: 25px; }
+  main div h4 {
+    font-size: 18px; }
+
+.productos__flex--container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 50px 20px; }
+
+.productos__card--img {
+  width: 350px; }
+
+/* Main Contacto */
+main {
+  margin-top: 50px; }
+  main fieldset input {
+    width: 500px;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0; }
+
+.form__flex--container {
+  display: flex;
+  gap: 60px;
+  justify-content: right;
+  margin-right: 50px;
+  margin-top: 50px; }
+
+::placeholder {
+  font-style: italic;
+  text-align: left; }
+
+input:focus {
+  outline: none;
+  border-bottom: 2px solid red; }
+
+.Buttons {
+  margin-right: 50px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  gap: 50px; }
+
+.buttonStyle {
+  width: 225px;
+  height: 50px;
+  font-style: italic;
+  color: black;
+  background-color: white;
+  border-radius: 25px;
+  transition: .4s; }
+
+.buttonStyle:hover {
+  background-color: black;
+  color: white;
+  transition: .4s; }
+
+.contacto__img--banner {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center; }
+
+/* Main Ubicacion */
 /* Footer */
 footer {
-  padding-bottom: 200px;
-  background-image: linear-gradient(to top, #000000, #2e2e2e, #585858, #878787, #b9b9b9, #d0d0d0, #e7e7e7, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff); }
+  padding-bottom: 200px; }
   footer div img {
     width: 100px;
     height: 100px; }
