--- a/main/_footer.scss
+++ b/main/_footer.scss
@@ -1,6 +1,6 @@
 footer{
     padding-bottom: 200px;
-    background-image: linear-gradient(to top, #000000, #2e2e2e, #585858, #878787, #b9b9b9, #d0d0d0, #e7e7e7, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
+    // background-image: linear-gradient(to top, #000000, #2e2e2e, #585858, #878787, #b9b9b9, #d0d0d0, #e7e7e7, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
     div{
         img{
             width: 100px;
