--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: 'Bebas Neue', sans-serif; }
 
 /* Mixins */
 /* Header */
@@ -37,13 +38,15 @@ div section h1 {
 div section img {
   width: 550px;
   height: 750px;
-  border: 2px solid black; }
+  border: 2px solid black;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; }
 
 .carousel-inner {
   margin-top: 50px;
   width: 80%;
   height: 650px;
-  border: 2px solid black; }
+  border: 2px solid black;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; }
 
 #carouselExample {
   display: flex;
@@ -187,4 +190,4 @@ footer {
 
 .footerImg:hover {
   transform: scale(1.1);
-  transition: .4s; }
+  transition: .2s; }
