--- a/layout/_main-productos.scss
+++ b/layout/_main-productos.scss
@@ -7,9 +7,6 @@ main{
         font-style: italic;
     }
     div{
-    }div{
-        img{
-        }
         h3{
             font-size: 25px;
         }
@@ -24,10 +21,18 @@ main{
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 50px 20px;
+    column-gap: 50px;
 }
 
 .productos__card--img{
     width: 350px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    transition: .2s;
+}
+
+.productos__card--img:hover{
+    transform: scale(1.01);
+    transition: .2s;
+    cursor: pointer;
 }
 
